last fixes + jest html reporter

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "test": "jest --coverage --noStackTrace --silent"
   },
   "jest": {
+    "reporters": [ "default", [ "./node_modules/jest-html-reporter", { "pageTitle": "Test Report" } ] ],
     "verbose": false,
     "setupFiles": [
       "./setup-jest.js"
